[tool.poetry]
name = "crypto-finance-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "crypto_finance_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "^1.4.26"
asyncpg = "^0.27.0"
aiohttp = "^3.8.4"
requests = "^2.30.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
